--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ h6
     margin: 3.5rem 2.5rem; 
 }
 .hero {
-    background: url("img/starrysky.png") no-repeat center center fixed;
+    background: url(../img/starrysky.png) no-repeat center center fixed;
     background-size: cover;
     height: 100vh; 
 }
@@ -118,8 +118,8 @@ h6
 .middle-bar,
 .bottom-bar {
     display: block;
-    width: 40px;
-    height: 10px;
+    width: 30px;
+    height: 5px;
     background-color: #333;
     margin-bottom: 4px;
     transition: transform 0.4s cubic-bezier(1, 0, 0, 1) 0, background-color 0.6s ease 0; 
