responsive fixes to navigation

--- a/css/main.css
+++ b/css/main.css
@@ -54,19 +54,15 @@ h6
     width: 10rem;
     padding: 2rem; 
 }
-
 .move-left .exit-off-canvas {
     box-shadow: none; 
 }
-
-.right-off-canvas-menu {
-    width: 35%; 
-}
-
 .move-left > .inner-wrap {
-    transform: translate3d(-35%, 0, 0); 
+    transform: translate3d(-85%, 0, 0);
 }
-
+.right-off-canvas-menu {
+    width: 65%;
+}
 .right-off-canvas-menu {
     background: #00d7ff;
     padding: 3rem 3rem; 
@@ -144,3 +140,48 @@ h6
   transform: rotate(45deg);
   background-color: #333; 
 }
+
+/* Medium screens */
+@media only screen and (min-width: 40.063em) {
+        .move-left > .inner-wrap {
+            transform: translate3d(-35%, 0, 0); 
+        }
+        .right-off-canvas-menu {
+            width: 35%; 
+        }
+
+
+    } /* min-width 641px, medium screens */
+
+
+
+
+
+
+/* MEDIA QUERIES */
+
+
+
+/* Small screens */
+
+@media only screen { } /* Define mobile styles */
+
+@media only screen and (max-width: 40em) { } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
+
+/* Medium screens */
+@media only screen and (min-width: 40.063em) {} /* min-width 641px, medium screens */
+
+@media only screen and (min-width: 40.063em) and (max-width: 64em) { } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+
+/* Large screens */
+@media only screen and (min-width: 64.063em) { } /* min-width 1025px, large screens */
+
+@media only screen and (min-width: 64.063em) and (max-width: 90em) { } /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
+
+/*   XLarge screens */
+@media only screen and (min-width: 90.063em) { } /* min-width 1441px, xlarge screens */
+
+@media only screen and (min-width: 90.063em) and (max-width: 120em) { } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
+
+/* XXLarge screens */
+@media only screen and (min-width: 120.063em) { } /* min-width 1921px, xxlarge screens */
