--- a/css/main.css
+++ b/css/main.css
@@ -82,9 +82,9 @@ h6
 .sub-nav li {
     list-style: none;
 }
-
-
-
+ul.sub-menu {
+    margin-bottom: 0;
+}
 
 
 
@@ -103,8 +103,7 @@ h6
 }
 .overlay {
     background-image: linear-gradient(45deg, #662d8c, #ed1e79);
-    height: 500px;
-    background: opac;
+    height: 500px;   
     opacity: 0.1;
 }
 
